# winevents-parser

./: CLAUDE.md  HANDOFF.md  README.md  pyproject.toml  win_parser.py
samples/: event1.xml  event2.xml  event3.xml  multi_events.xml
tests/: test_filters.py  test_parser.py
tests/fixtures/: event_4104.xml  event_4624.xml  event_4625.xml  event_4688.xml  multi_events.xml
winevents_parser/: __init__.py  cli.py  filters.py  parser.py
