[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "winevents-parser"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
winevents-parser = "winevents_parser.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["winevents_parser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
